# comptools

./: LICENSE  README.md  __init__.py  basic_tools.py  hindemith.py  parsemaker.py  parsepy.py  setup.cfg  setup.py  similarity.py  test_graph.gv  twelve_tone.py
.github/workflows/: publish-to-test-pypi.yml
basic_tools/: __init__.py  basic_tools.py
comptools/: README.md  __init__.py  _all_classes.py  abjadtools.py  basic_tools.py  graphs.py  kozu.py  parsemaker.py  parsepy.py  twelve_tone.py
comptools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
