[metadata]
name = comptools
version = 0.0.1
author = peDro faRia
author_email = pedrofaria1989@gmail.com
description = Tools for assisting in composing and analyzing music
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pedrofariacomposer.github.io/site/
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pycse
    music21
    numpy
    matplotlib
    graphviz
    sklearn
    pandas


